--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 	<div class="fh5co-loader" style="display: none;"></div>
 
 	<div id="page">
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image: url(&quot;https://russomariodamiano.github.io/images/cover_bg_3.jpg&quot;); height: 915px; background-position: 0px -4193px;" data-stellar-background-ratio="0.5">
-		<div class="overlay"></div>
+	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image: url(&quot;https://russomariodamiano.github.io/images/cover_bg_3.jpg&quot;); height: 915px; background-position: 0px 0px;" data-stellar-background-ratio="0.5">
+
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
@@ -76,10 +76,10 @@
 							<h3><span>Data Scientist</span></h3>
 							<p>
 								</p><ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-twitter2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
+
+									<li><a href="#"><i class="icon-github2"></i></a></li>
 									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+
 								</ul>
 							<p></p>
 						</div>
@@ -99,23 +99,23 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Mario Damiano Russo</span></li>
+
+						<li><span class="first-block">Email:</span><span class="second-block">russomariod@gmail.com</span></li>
+
+
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<h2>Hello, World!</h2>
+					<p></p>
+					<p>Graduate Data Science student at Bocconi University, former Business Intelligence Data Engineer at Amazon during summer 2019.</p><p>"Statistics won't make you always right, but on average it will".</p>
 					<p>
 						</p><ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="https://github.com/RussoMarioDamiano"><i class="icon-github2"></i></a></li>
+
+							<li><a href="https://www.linkedin.com/in/mariodamianorusso/"><i class="icon-linkedin2"></i></a></li>
+
 						</ul>
 					<p></p>
 				</div>
@@ -322,7 +322,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-skills" class="animate-box animated fadeInUp animated-fast">
+	<div id="fh5co-skills" class="animate-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -331,29 +331,29 @@
 			</div>
 			<div class="row row-pb-md">
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span><canvas height="320" width="320" style="height: 160px; width: 160px;"></canvas></div>
+					<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span><canvas height="320" width="320" style="height: 160px; width: 160px;"></canvas></div>
+					<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span><canvas height="320" width="320" style="height: 160px; width: 160px;"></canvas></div>
+					<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
 				</div>
 
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span><canvas height="320" width="320" style="height: 160px; width: 160px;"></canvas></div>
+					<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span><canvas height="320" width="320" style="height: 160px; width: 160px;"></canvas></div>
+					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span><canvas height="320" width="320" style="height: 160px; width: 160px;"></canvas></div>
+					<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>Ruby</strong>85%</span><canvas height="320" width="320" style="height: 160px; width: 160px;"></canvas></div>
+					<div class="chart" data-percent="85"><span><strong>Ruby</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span><canvas height="320" width="320" style="height: 160px; width: 160px;"></canvas></div>
+					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
 				</div>
 			</div>
 			<div class="row">
@@ -423,13 +423,13 @@
 
 	<div id="fh5co-work" class="fh5co-bg-dark">
 		<div class="container">
-			<div class="row animate-box fadeInUp animated-fast">
+			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Work</h2>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-3 text-center col-padding animate-box fadeInUp animated-fast">
+				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
@@ -437,7 +437,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box fadeInUp animated-fast">
+				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
@@ -445,7 +445,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box fadeInUp animated-fast">
+				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
@@ -453,7 +453,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box fadeInUp animated-fast">
+				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
@@ -461,7 +461,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box fadeInUp animated-fast">
+				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
@@ -469,7 +469,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box fadeInUp animated-fast">
+				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-6.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
@@ -477,7 +477,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box fadeInUp animated-fast">
+				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-7.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
@@ -485,7 +485,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box fadeInUp animated-fast">
+				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-8.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
@@ -499,7 +499,7 @@
 
 	<div id="fh5co-blog">
 		<div class="container">
-			<div class="row animate-box fadeInUp animated-fast">
+			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Post on Medium</h2>
 					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
@@ -507,7 +507,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<div class="fh5co-blog animate-box fadeInUp animated-fast">
+					<div class="fh5co-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Mar. 15th 2016</span>
@@ -522,7 +522,7 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="fh5co-blog animate-box fadeInUp animated-fast">
+					<div class="fh5co-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Mar. 15th 2016</span>
@@ -537,7 +537,7 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="fh5co-blog animate-box fadeInUp animated-fast">
+					<div class="fh5co-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Mar. 15th 2016</span>
@@ -558,7 +558,7 @@
 	<div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
-			<div class="row animate-box fadeInUp animated-fast">
+			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
@@ -572,7 +572,7 @@
 		<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
 			<div class="overlay"></div>
 		</div>
-		<div class="choose animate-box fadeInUp animated-fast">
+		<div class="choose animate-box">
 			<h2>Contact</h2>
 			<form action="#">
 				<div class="row form-group">
@@ -611,12 +611,20 @@
 		</div>
 	</div>
 
-
+	<div id="map" class="fh5co-map" style="position: relative; overflow: hidden;"><div style="height: 100%; width: 100%; position: absolute; top: 0px; left: 0px; background-color: rgb(229, 227, 223);"><div class="gm-err-container"><div class="gm-err-content"><div class="gm-err-icon"><img src="https://maps.gstatic.com/mapfiles/api-3/images/icon_error.png" draggable="false" style="-webkit-user-select: none;"></div><div class="gm-err-title">Spiacenti, si è verificato un problema.</div><div class="gm-err-message">Google Maps non è stata caricata correttamente. Per i dettagli tecnici, consulta la console JavaScript.</div></div></div></div></div>
 	</div>
 
+	<div id="fh5co-footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<p>© 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
+				</div>
+			</div>
+		</div>
+	</div>
 
-
-	<div class="gototop js-top active">
+	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
 	</div>
 
