Edited background filter color

--- a/index.html
+++ b/index.html
@@ -102,14 +102,12 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<p>Graduate Data Science student at Bocconi University, former Business Intelligence Data Engineer Intern at Amazon.</p>
+					<p>"Statistics won't make you always right, but on average it will".</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="https://github.com/russomariodamiano"><i class="icon-github2"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/mariodamianorusso/"><i class="icon-linkedin2"></i></a></li>
 						</ul>
 					</p>
 				</div>
