--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
 					<p>Graduate Data Science student at Bocconi University, former Business Intelligence Data Engineer Intern at Amazon.</p>
-					<p>"Statistics won't make you always right, but on average it will".</p>
+					<p>"Statistics won't make you always right, but on average it will."</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://github.com/russomariodamiano"><i class="icon-github2"></i></a></li>
@@ -132,11 +132,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<h3 class="timeline-title">Visiting Research Student</h3>
+									<span class="company">Bocconi Institute for Data Science and Analytics (BIDSA)</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>[Mar 2019 - Current] Research in Bayesian Statistics and Causal Inference Methodologies</p>
 								</div>
 							</div>
 						</li>
@@ -144,11 +144,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<h3 class="timeline-title">Business Intelligence Data Engineer</h3>
+									<span class="company">Amazon</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>[Jun - Aug 2019] • Amazon Web Services data pipe-lining, data extraction, data modeling and data engineering. Machine learning and econometric modeling, time series analysis. Software development.</p>
 								</div>
 							</div>
 						</li>
