--- a/index.html
+++ b/index.html
@@ -93,15 +93,12 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Mario Damiano Russo</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">russomariod@gmail.com</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<h2>Hello There!</h2>
+					<h2>Hello, World!</h2>
 					<p>Graduate Data Science student at Bocconi University, former Business Intelligence Data Engineer Intern at Amazon.</p>
 					<p>"Statistics won't make you always right, but on average it will."</p>
 					<p>
@@ -136,7 +133,8 @@
 									<span class="company">Bocconi Institute for Data Science and Analytics (BIDSA)</span>
 								</div>
 								<div class="timeline-body">
-									<p>[Mar 2019 - Current] Research in Bayesian Statistics and Causal Inference Methodologies</p>
+									<p>[Mar 2019 - Current]</p>
+									<p>Research in Bayesian Statistics and Causal Inference Methodologies</p>
 								</div>
 							</div>
 						</li>
@@ -148,7 +146,10 @@
 									<span class="company">Amazon</span>
 								</div>
 								<div class="timeline-body">
-									<p>[Jun - Aug 2019] • Amazon Web Services data pipe-lining, data extraction, data modeling and data engineering. Machine learning and econometric modeling, time series analysis. Software development.</p>
+									<p>[Jun 2019 - Aug 2019]</p>
+									<p>• Amazon Web Services data pipe-lining, data extraction, data modeling and data engineering;</p>
+									<p>• Machine learning and econometric modeling, time series analysis;</p>
+									<p>• Software development.</p>
 								</div>
 							</div>
 						</li>
@@ -156,11 +157,13 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">UI/UX Designer</h3>
-									<span class="company">Company Name - 2010 - 2012</span>
+									<h3 class="timeline-title">Data Analyst Intern</h3>
+									<span class="company">Divisible Global</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>[Jun 2018 - Aug 2018]</p>
+									<p>• Crawler programming for web scraping; </p>
+									<p>• Scientific programming for data analysis.</p>
 								</div>
 							</div>
 						</li>
@@ -173,11 +176,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree</h3>
-									<span class="company">University Name - 2007 - 2009</span>
+									<h3 class="timeline-title">MSc in Data Science and Analytics</h3>
+									<span class="company">Bocconi University, Milan (Italy)</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>[Sep 2018 - Sep 2020]</p>
 								</div>
 							</div>
 						</li>
@@ -185,11 +188,12 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Bachelors Degree</h3>
-									<span class="company">University Name - 2002 - 2006</span>
+									<h3 class="timeline-title">Bachelors in International Economics</h3>
+									<span class="company">Bocconi University, Milan (Italy)</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>[Sep 2015 - Sep 2018]</p>
+									<p>Exchange semester at Tsinghua University, Beijing</p>
 								</div>
 							</div>
 						</li>
