--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 							<h3><span>Data Scientist</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://github.com/RussoMarioDamiano"><i class="icon-github2"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/mariodamianorusso/"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://github.com/RussoMarioDamiano", target="_blank"><i class="icon-github2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/mariodamianorusso/", target="_blank"><i class="icon-linkedin2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -103,8 +103,8 @@
 					<p>"Statistics won't make you always right, but on average it will."</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="https://github.com/russomariodamiano"><i class="icon-github2"></i></a></li>
-							<li><a href="https://www.linkedin.com/in/mariodamianorusso/"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://github.com/russomariodamiano", target="_blank"><i class="icon-github2"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/mariodamianorusso/", target="_blank"><i class="icon-linkedin2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -116,7 +116,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>My Resume</h2>
+					<h2>Resume</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -216,11 +216,10 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-paintbrush"></i>
+								<i class="icon-genius"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Design</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Machine Learning</h3>
 							</div>
 						</div>
 					</div>
@@ -228,11 +227,10 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-briefcase"></i>
+								<i class="icon-compass3"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Branding</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Mathematical Modeling</h3>
 							</div>
 						</div>
 
@@ -243,15 +241,14 @@
 								<i class="icon-search"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Analytics</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Natural Language Processing</h3>
 							</div>
 						</div>
 					</div>
 				</div>
 
-
-				<div class="row">
+<!--
+			<div class="row">
 					<div class="col-md-4 text-center">
 
 						<div class="feature-left">
@@ -265,31 +262,8 @@
 						</div>
 
 					</div>
-
-					<div class="col-md-4 text-center">
-						<div class="feature-left">
-							<span class="icon">
-								<i class="icon-genius"></i>
-							</span>
-							<div class="feature-copy">
-								<h3>Web Marketing</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-							</div>
-						</div>
-
-					</div>
-					<div class="col-md-4 text-center">
-						<div class="feature-left">
-							<span class="icon">
-								<i class="icon-chat"></i>
-							</span>
-							<div class="feature-copy">
-								<h3>Support</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-							</div>
-						</div>
-					</div>
 				</div>
+-->
 			</div>
 		</div>
 	</div>
@@ -481,7 +455,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
+					<p>© Mario Damiano Russo. Based on a template by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></a></p>
 				</div>
 			</div>
 		</div>
