--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 								<i class="icon-search"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Computational Linguistics</h3>
+								<h3>NLP</h3>
 							</div>
 						</div>
 					</div>
