Added Bash and AWS skills

--- a/index.html
+++ b/index.html
@@ -277,16 +277,22 @@
 			</div>
 			<div class="row row-pb-md">
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="100"><span><strong>Python</strong></span></div>
+					<div class="chart" data-percent="100"><span><strong>Python</strong>100</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>MySQL</strong></span></div>
+					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="80"><span><strong>HTML5</strong></span></div>
+					<div class="chart" data-percent="80"><span><strong>HTML5</strong>80</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="70"><span><strong>R</strong></span></div>
+					<div class="chart" data-percent="70"><span><strong>R</strong>70</span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="70"><span><strong>Bash</strong>70</span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="75"><span><strong>AWS</strong>70</span></div>
 				</div>
 			</div>
 		</div>
