--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 		</div>
 		<br>
 		<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-			<a href="https://github.com/russomariodamiano/MarioDamianoRussoCV.pdf" ,="" target="_blank">
+			<a href="https://github.com/RussoMarioDamiano/russomariodamiano.github.io/raw/master/MarioDamianoRussoCV.pdf" ,="" target="_blank">
 				<p><u>Download my full CV here</u></p>
 			</a>
 		</div>
