Added first project image and desc

--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/allocative_efficiency.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>Allocative Efficiency of Zero-Intelligence Traders</h3>
+							<span>A modeling research testing the claims made by Cliff et al. in the 1997 paper titled 'Zero is Not Enough'</span>
 						</div>
 					</a>
 				</div>
