--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/allocative_efficiency.jpg);">
+					<a href="https://github.com/RussoMarioDamiano/Testing-Allocative-Efficiency-of-ZeroIntelligence-Traders" class="work" style="background-image: url(images/allocative_efficiency.jpg);">
 						<div class="desc">
 							<h3>Allocative Efficiency of Zero-Intelligence Traders</h3>
 							<span>A modeling research testing the claims made by Cliff et al. in the 1997 paper titled 'Zero is Not Enough'</span>
@@ -321,10 +321,10 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
+					<a href="https://github.com/RussoMarioDamiano/Presidential-Speeches-Analysis" class="work" style="background-image: url(images/presidential.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Brading</span>
+							<h3>Presidential Speeches NLP Analysis</h3>
+							<span>A comparative NLP analysis of the presidential speeches held by U.S. Presidents Donald Trump and Barack Obama during their presidencies</span>
 						</div>
 					</a>
 				</div>
