--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://github.com/RussoMarioDamiano/Testing-Allocative-Efficiency-of-ZeroIntelligence-Traders" class="work" style="background-image: url(images/allocative_efficiency.jpg);">
+					<a href="https://github.com/RussoMarioDamiano/Testing-Allocative-Efficiency-of-ZeroIntelligence-Traders" target="_blank" class="work" style="background-image: url(images/allocative_efficiency.jpg);">
 						<div class="desc">
 							<h3>Allocative Efficiency of Zero-Intelligence Traders</h3>
 							<span>A modeling research testing the claims made by Cliff et al. in the 1997 paper titled 'Zero is Not Enough'</span>
@@ -321,7 +321,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://github.com/RussoMarioDamiano/Presidential-Speeches-Analysis" class="work" style="background-image: url(images/presidential.jpg);">
+					<a href="https://github.com/RussoMarioDamiano/Presidential-Speeches-Analysis" target="_blank" class="work" style="background-image: url(images/presidential.jpg);">
 						<div class="desc">
 							<h3>Presidential Speeches NLP Analysis</h3>
 							<span>A comparative NLP analysis of the presidential speeches held by U.S. Presidents Donald Trump and Barack Obama during their presidencies</span>
@@ -329,7 +329,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="#" target="_blank" class="work" style="background-image: url(images/portfolio-3.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Illustration</span>
@@ -337,7 +337,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
+					<a href="#" target="_blank" class="work" style="background-image: url(images/portfolio-4.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Design</span>
@@ -345,7 +345,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
+					<a href="#" target="_blank" class="work" style="background-image: url(images/portfolio-5.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Website</span>
@@ -353,7 +353,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-6.jpg);">
+					<a href="#" target="_blank" class="work" style="background-image: url(images/portfolio-6.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Illustration</span>
@@ -361,7 +361,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-7.jpg);">
+					<a href="#" target="_blank" class="work" style="background-image: url(images/portfolio-7.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Brading</span>
@@ -369,7 +369,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-8.jpg);">
+					<a href="#" target="_blank" class="work" style="background-image: url(images/portfolio-8.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Illustration</span>
