--- a/index.html
+++ b/index.html
@@ -311,14 +311,6 @@
 					<h2>Work</h2>
 				</div>
 			</div>
-			<div class="col-md-3 text-center col-padding animate-box">
-				<a href="https://medium.com/@russomariod/a-guide-to-collaborative-topic-modeling-recommender-systems-49fd576cc871" target="_blank" class="work" style="background-image: url(images/ctm.png);">
-					<div class="desc">
-						<h3>Collaborative Topic Modeling</h3>
-						<span>Implementation of Collaborative Topic Modeling to build a topic-based recommender system for Steam Games with out-of-matrix prediction capabilities</span>
-					</div>
-				</a>
-			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="https://github.com/RussoMarioDamiano/Testing-Allocative-Efficiency-of-ZeroIntelligence-Traders" target="_blank" class="work" style="background-image: url(images/allocative_efficiency.jpg);">
@@ -333,6 +325,14 @@
 						<div class="desc">
 							<h3>Presidential Speeches NLP Analysis</h3>
 							<span>A comparative NLP analysis of the presidential speeches held by U.S. Presidents Donald Trump and Barack Obama during their presidencies</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://medium.com/@russomariod/a-guide-to-collaborative-topic-modeling-recommender-systems-49fd576cc871" target="_blank" class="work" style="background-image: url(images/ctm.png);">
+						<div class="desc">
+							<h3>Collaborative Topic Modeling</h3>
+							<span>Implementation of Collaborative Topic Modeling to build a topic-based recommender system for Steam Games</span>
 						</div>
 					</a>
 				</div>
