Revert "CTM updates"
This reverts commit aac7515626138228c149aeca455bb0f8d48f0c33.

--- a/index.html
+++ b/index.html
@@ -313,10 +313,10 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://medium.com/@russomariod/a-guide-to-collaborative-topic-modeling-recommender-systems-49fd576cc871" target="_blank" class="work" style="background-image: url(images/ctm.png);">
+					<a href="https://github.com/RussoMarioDamiano/Testing-Allocative-Efficiency-of-ZeroIntelligence-Traders" target="_blank" class="work" style="background-image: url(images/allocative_efficiency.jpg);">
 						<div class="desc">
-							<h3>Collaborative Topic Modeling</h3>
-							<span>Implementation of Collaborative Topic Modeling to build a topic-based recommender system for Steam Games</span>
+							<h3>Allocative Efficiency of Zero-Intelligence Traders</h3>
+							<span>A modeling research testing the claims made by Cliff et al. in the 1997 paper titled 'Zero is Not Enough'</span>
 						</div>
 					</a>
 				</div>
@@ -329,10 +329,10 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="" target="_blank" class="work" style="background-image: url(images/allocative_efficiency.jpg);">
+					<a href="https://medium.com/@russomariod/a-guide-to-collaborative-topic-modeling-recommender-systems-49fd576cc871" target="_blank" class="work" style="background-image: url(images/ctm.png);">
 						<div class="desc">
-							<h3>Allocative Efficiency of Zero-Intelligence Traders</h3>
-							<span>A modeling research testing the claims made by Cliff et al. in the 1997 paper titled 'Zero is Not Enough'</span>
+							<h3>Collaborative Topic Modeling</h3>
+							<span>Implementation of Collaborative Topic Modeling to build a topic-based recommender system for Steam Games</span>
 						</div>
 					</a>
 				</div>
