--- a/index.html
+++ b/index.html
@@ -324,18 +324,18 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="" target="_blank" class="work" style="background-image: url(images/allocative_efficiency.jpg);">
+					<a href="https://github.com/RussoMarioDamiano/VanillaSABR" target="_blank" class="work" style="background-image: url(images/sabr.png);">
 						<div class="desc">
-							<h3>Allocative Efficiency of Zero-Intelligence Traders</h3>
-							<span>A modeling research testing the claims made by Cliff et al. in the 1997 paper titled 'Zero is Not Enough'</span>
+							<h3>SABR Implementation</h3>
+							<span>Didactic implementation of a SABR Volatility Model as described in Hagan et al. 'Managing Smile Risk' (2002)</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" target="_blank" class="work" style="background-image: url(images/portfolio-4.jpg);">
+					<a href="https://github.com/RussoMarioDamiano/Testing-Allocative-Efficiency-of-ZeroIntelligence-Traders" target="_blank" class="work" style="background-image: url(images/allocative_efficiency.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Design</span>
+							<h3>Allocative Efficiency of Zero-Intelligence Traders</h3>
+							<span>A modeling research testing the claims made by Cliff et al. in the 1997 paper titled 'Zero is Not Enough'</span>
 						</div>
 					</a>
 				</div>
