--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 					<div class="chart" data-percent="100"><span><strong>Python</strong>100</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85</span></div>
+					<div class="chart" data-percent="85"><span><strong>SQL</strong>85</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="80"><span><strong>HTML5</strong>80</span></div>
