--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 					<a href="https://github.com/RussoMarioDamiano/LatentDirichletAllocation_FromScratch" target="_blank" class="work" style="background-image: url(images/LDA.png);">
 						<div class="desc">
 							<h3>A Guide to Latent Dirichlet Allocation</h3>
-							<span>A self-contained, guide on LDA. Model details, Gibbs sampling transition kernel derivation, from scratch Python3 implementation.</span>
+							<span>A self-contained guide to LDA. Model details, Gibbs sampling transition kernel derivation, from scratch Python3 implementation.</span>
 						</div>
 					</a>
 				</div>
