--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-compass3"></i>
+								<i class="icon-stats-bars"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Mathematical Modeling</h3>
+								<h3>Bayesian Modeling</h3>
 							</div>
 						</div>
 
@@ -324,6 +324,14 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://github.com/RussoMarioDamiano/LatentDirichletAllocation_FromScratch" target="_blank" class="work" style="background-image: url(images/LDA.png);">
+						<div class="desc">
+							<h3>A Guide to Latent Dirichlet Allocation</h3>
+							<span>A self-contained guide to LDA. Model details, Gibbs sampling transition kernel derivation, from scratch Python3 implementation.</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="https://github.com/RussoMarioDamiano/VanillaSABR" target="_blank" class="work" style="background-image: url(images/sabr.png);">
 						<div class="desc">
 							<h3>SABR Implementation</h3>
@@ -336,14 +344,6 @@
 						<div class="desc">
 							<h3>Allocative Efficiency of Zero-Intelligence Traders</h3>
 							<span>A modeling research testing the claims made by Cliff et al. in the 1997 paper titled 'Zero is Not Enough'</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" target="_blank" class="work" style="background-image: url(images/portfolio-5.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Website</span>
 						</div>
 					</a>
 				</div>
