--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello, World!</h2>
-					<p>Graduate Data Science student at Bocconi University, former Business Intelligence Data Engineer Intern at Amazon.</p>
+					<p>Quantitative analyst at Citi, ex-Amazon Data Engineer, graduated cum laude in Data Science and Statistics with a thesis on Bayesian Feature-Aware matrix factorizations.</p>
 					<p>"Statistics won't make you always right, but on average it will."</p>
 					<p>
 						<ul class="fh5co-social-icons">
@@ -122,6 +122,21 @@
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Work Experience</h3></div>
 						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Quantitative Analyst</h3>
+									<span class="company">Citi</span>
+								</div>
+								<div class="timeline-body">
+									<p>[Jun 2020 - Present]</p>
+									<p>• Constrained convex portfolio optimization;</p>
+									<p>• ETF basket creation and redemption;</p>
+									<p>• Fixed income ETF trading.</p>
+								</div>
+							</div>
+						</li>
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
@@ -130,7 +145,7 @@
 									<span class="company">Bocconi Institute for Data Science and Analytics (BIDSA)</span>
 								</div>
 								<div class="timeline-body">
-									<p>[Mar 2019 - Current]</p>
+									<p>[Mar 2019 - Sep 2020]</p>
 									<p>Research in Bayesian Statistics and Causal Inference Methodologies</p>
 								</div>
 							</div>
@@ -230,10 +245,10 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-stats-bars"></i>
+								<i class="icon-compass3"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Bayesian Modeling</h3>
+								<h3>Mathematical Modeling</h3>
 							</div>
 						</div>
 
@@ -324,14 +339,6 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://github.com/RussoMarioDamiano/LatentDirichletAllocation_FromScratch" target="_blank" class="work" style="background-image: url(images/LDA.png);">
-						<div class="desc">
-							<h3>A Guide to Latent Dirichlet Allocation</h3>
-							<span>A self-contained guide to LDA. Model details, Gibbs sampling transition kernel derivation, from scratch Python3 implementation.</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="https://github.com/RussoMarioDamiano/VanillaSABR" target="_blank" class="work" style="background-image: url(images/sabr.png);">
 						<div class="desc">
 							<h3>SABR Implementation</h3>
@@ -344,6 +351,14 @@
 						<div class="desc">
 							<h3>Allocative Efficiency of Zero-Intelligence Traders</h3>
 							<span>A modeling research testing the claims made by Cliff et al. in the 1997 paper titled 'Zero is Not Enough'</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="#" target="_blank" class="work" style="background-image: url(images/portfolio-5.jpg);">
+						<div class="desc">
+							<h3>Project Name</h3>
+							<span>Website</span>
 						</div>
 					</a>
 				</div>
