Added graduation project

--- a/index.html
+++ b/index.html
@@ -323,6 +323,14 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://github.com/RussoMarioDamiano/BayesianFeatureAwarePoissonFactorizations" target="_blank" class="work" style="background-image: url(images/BNPPAPF.png);">
+						<div class="desc">
+							<h3>Bayesian Feature-aware Poisson Factorizations</h3>
+							<span>Graduation thesis - creation of a Bayesian feature-aware probabilistic recommender system based on the Gamma-Poisson model, declined in the parametric and nonparametric setting.</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="https://medium.com/@russomariod/a-guide-to-collaborative-topic-modeling-recommender-systems-49fd576cc871" target="_blank" class="work" style="background-image: url(images/ctm.png);">
 						<div class="desc">
 							<h3>Collaborative Topic Modeling</h3>
@@ -351,14 +359,6 @@
 						<div class="desc">
 							<h3>Allocative Efficiency of Zero-Intelligence Traders</h3>
 							<span>A modeling research testing the claims made by Cliff et al. in the 1997 paper titled 'Zero is Not Enough'</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" target="_blank" class="work" style="background-image: url(images/portfolio-5.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Website</span>
 						</div>
 					</a>
 				</div>
