Updated cv, work history

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
 							<h1><span>Mario Damiano Russo</span></h1>
-							<h3><span>Data Scientist</span></h3>
+							<h3><span>Quant Trader</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://github.com/RussoMarioDamiano", target="_blank"><i class="icon-github2"></i></a></li>
@@ -96,7 +96,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello, World!</h2>
-					<p>Quantitative analyst at Citi, ex-Amazon Data Engineer, graduated cum laude in Data Science and Statistics with a thesis on Bayesian Feature-Aware matrix factorizations.</p>
+					<p>Quant trader at Citi, ex-Amazon Data Engineer, graduated cum laude in Statistics with a thesis on Bayesian Feature-Aware matrix factorizations.</p>
 					<p>"Statistics won't make you always right, but on average it will."</p>
 					<p>
 						<ul class="fh5co-social-icons">
@@ -126,14 +126,30 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
+									<h3 class="timeline-title">Algo Trader</h3>
+									<span class="company">Citi</span>
+								</div>
+								<div class="timeline-body">
+									<p>[Jan 2023 - Present]</p>
+									<p>• Algorithmic market making on bonds, fixed income ETFs;</p>
+									<p>• Algo parameter calibration and monitoring during market hours;</p>
+									<p>• Research on convex policy trading strategies;</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
 									<h3 class="timeline-title">Quantitative Analyst</h3>
 									<span class="company">Citi</span>
 								</div>
 								<div class="timeline-body">
-									<p>[Jun 2020 - Present]</p>
-									<p>• Constrained convex portfolio optimization;</p>
-									<p>• ETF basket creation and redemption;</p>
-									<p>• Fixed income ETF trading.</p>
+									<p>[Jun 2020 - Jan 2023]</p>
+									<p>• Creation of systematic convex policy trading strategies;</p>
+									<p>• EPortfolio optimization on returns, risk, and balance sheet cost;</p>
+									<p>• Spread change modeling of latent factor risk;</p>
+									<p>• Intra-day ETF NAV estimation.</p>
 								</div>
 							</div>
 						</li>
@@ -160,7 +176,7 @@
 								<div class="timeline-body">
 									<p>[Jun 2019 - Aug 2019]</p>
 									<p>• Amazon Web Services data pipe-lining, data extraction, data modeling and data engineering;</p>
-									<p>• Machine learning and econometric modeling, time series analysis;</p>
+									<p>• Machine learning, econometric modeling, time series analysis;</p>
 									<p>• Software development.</p>
 								</div>
 							</div>
@@ -188,24 +204,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">MSc in Data Science and Analytics</h3>
+									<h3 class="timeline-title">MSc in Statistics</h3>
 									<span class="company">Bocconi University, Milan (Italy)</span>
 								</div>
 								<div class="timeline-body">
-									<p>[Sep 2018 - Sep 2020]</p>
-								</div>
-							</div>
-						</li>
-						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">BSc in International Economics</h3>
-									<span class="company">Bocconi University, Milan (Italy)</span>
-								</div>
-								<div class="timeline-body">
-									<p>[Sep 2015 - Sep 2018]</p>
-									<p>Exchange semester at Tsinghua University, Beijing</p>
+									<p>[Sep 2015 - Sep 2020]</p>
 								</div>
 							</div>
 						</li>
