--- a/index.html
+++ b/index.html
@@ -299,6 +299,9 @@
 					<div class="chart" data-percent="100"><span><strong>Python</strong>100</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="90"><span><strong>KDB/q</strong>90</span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="85"><span><strong>SQL</strong>85</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
@@ -397,7 +400,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>© Mario Damiano Russo. Based on a template by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></a></p>
+					<p>© Mario Damiano Russo.</p>
 				</div>
 			</div>
 		</div>
